[INTERNAL][FIX] sap.m.InputBase: White overflow in compact mode has been removed
- When you hover over and focus the sap.m.TextArea which is using
sap.m.InputBase you get a little white overflow under the TextArea.

- I've removed the problem which was coming from a rule inside the
InputBase.less - adding an unnecessary 1rem of line-height to the
InputBase.

- This change must be downported to 1.48 when the 'sapMInputDivWrapper'
has been introduced

- There isn't any specified line-height for the 'sapMInputDivWrapper' by
spec.

Previous change that caused the issue : 2195199 -
InputBase.less line #202 for the sapMInputDivWrapper

BCP: 1780456668

--- a/src/sap.m/src/sap/m/themes/base/InputBase.less
+++ b/src/sap.m/src/sap/m/themes/base/InputBase.less
@@ -43,7 +43,6 @@
 }
 
 .sapMInputBase,
-.sapMInputDivWrapper,
 .sapMInputBasePlaceholder {
 	box-sizing: border-box;
 	line-height: 0;
@@ -188,7 +187,6 @@
 .sapUiSizeCompact {
 
 	.sapMInputBase,
-	.sapMInputDivWrapper,
 	.sapMInputBasePlaceholder {
 		line-height: 1rem;
 	}
